Se agregó funcionalidad.
Al pulsar enter sobre las cajas de texto hace el login automáticamente.

Se globalizaron las cajas de texto para ser cargados los controles al cargar la página.

--- a/Meetup - Desarrollo Ágil en HTML 5/Proyecto Login/client/index.html
+++ b/Meetup - Desarrollo Ágil en HTML 5/Proyecto Login/client/index.html
@@ -14,12 +14,15 @@
 		<script src="app.js"></script>
 	</head>
 	<body>
+		
+		<h1 class="text-center text-info">Acceso a usuarios</h1>
+		
 		<div class="panel">
 			<input class="form-control" id="txt_user"
 				type="text" placeholder="Usuario" autofocus><br>
 			<input class="form-control" id="txt_password"
 				type="password" placeholder="Contraseña"><br>
-			<button class="btn btn-success pull-right"
+			<button class="btn btn-success pull-right" id="btn_login"
 				onclick="login(this)">ingresar</button>
 				
 			<br><br><br>
